<?xml version="1.0"?>
<package>
  <name>common</name>
  <version>0.0.0</version>
  <description>The common package</description>
  <maintainer email="david@swords.computer">David Swords</maintainer>
  <license>BSD 2-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <export>
  </export>
</package>
